Fix being able to stack resin whisperer nodes on top of hive weeds without destroying the hive weed tile

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Base/base_structure.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Base/base_structure.yml
@@ -36,7 +36,7 @@
       Brute:
         collection: XenoResinBreak
   - type: XenoConstruct
-  - type: XenoDestroyWeedNodes
+  - type: RMCDeleteAnchoredOnInit
   - type: RMCWallExplosionDeletable
   - type: DestroyedByExplosionType
   - type: NpcFactionMember
