--- a/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
+++ b/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
@@ -6,7 +6,7 @@
   - type: Transform
   - type: Sprite
     sprite: _RMC14/Effects/xeno_acid.rsi
-    drawdepth: Effects
+    drawdepth: WallMountedItems
     layers:
     - state: acid_normal
 
