Add royal smart gun operator

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/webbing.yml
@@ -452,3 +452,14 @@
     contents:
       - id: CMM11Knife
         amount: 5
+
+- type: entity
+  parent: CMWebbingPouch
+  id: CMWebbingPouchRoyal
+  suffix: Filled, Royal
+  components:
+  - type: StorageFill
+    contents:
+      - id: CMMaskGas # TODO RMC14 l7 gasmask
+      - id: RMCHeadRoyalBeret
+      - id: CMMRE # TODO RMC14 TSE ORP ration
