--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/medical_kit_pouch.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/medical_kit_pouch.yml
@@ -101,3 +101,18 @@
     - id: CMBurnKit10
     - id: CMBurnKit10
 #    - id: CMSplints5 # TODO RMC14
+
+- type: entity
+  parent: RMCPouchMedkit
+  id: RMCPouchMedkitFillRoyal
+  suffix: Filled, Royal
+  components:
+  - type: StorageFill
+    contents:
+    #    - id: CMSplints5 # TODO RMC14
+    - id: CMTraumaKit10
+    - id: CMBurnKit10
+    #    - id: CMOxycodoneAutoInjector # TODO RMC14
+    - id: CMBicaridineAutoInjector
+    - id: CMKelotaneAutoInjector
+    - id: CMHealthAnalyzer
