--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -145,6 +145,13 @@
   components:
   - type: SquadTeam
     color: "#9b0612"
+    background:
+      sprite: _RMC14/Interface/cm_job_icons.rsi
+      state: empty
+    blacklistedSquadArmor:
+    - Helmet
+    - Goggles
+    - Armor
     radio: SPP
     minimapBackground:
       sprite: _RMC14/Interface/map_blips.rsi
@@ -162,6 +169,13 @@
   components:
   - type: SquadTeam
     color: "#C0C0C0"
+    background:
+      sprite: _RMC14/Interface/cm_job_icons.rsi
+      state: empty
+    blacklistedSquadArmor:
+    - Helmet
+    - Goggles
+    - Armor
     radio: WEYA
     minimapBackground:
       sprite: _RMC14/Interface/map_blips.rsi
