--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Royal/royal_smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Royal/royal_smart_gun_operator.yml
@@ -5,7 +5,7 @@
   description: rmc-job-description-royal-smart-gun-operator
   playTimeTracker: CMJobRoyalSmartGunOperator
   ranks:
-    RMCRankCivilian: [ ]
+    RMCRankLanceCorporal: [ ]
   startingGear: RMCGearRoyalSmartGunOperator
   icon: CMJobIconEmpty
   joinNotifyCrew: false
