--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/intel.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/intel.yml
@@ -33,7 +33,7 @@
         points: 10
       - id: CMMagazineSMGM63Ext
         points: 10
-      - id: CMMagazineRifleM54C
+      - id: CMMagazineRifleM54CAP
         points: 10
       - id: CMMagazineRifleM54CExt
         points: 10
