--- a/Resources/Maps/_RMC14/shiva.yml
+++ b/Resources/Maps/_RMC14/shiva.yml
@@ -129,6 +129,8 @@ entities:
     - type: MapLight
     - type: Roof
       data: {}
+    - type: RMCAmbientLightEffects
+      sunset: RMCColorSequenceSunsetCold
     - type: LoadedMap
     - type: MapGrid
       chunks:
