--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
@@ -65,23 +65,57 @@
 
 - type: entity
   parent: RMC40MMGrenadeM74AGMF
-  id: RMC40MMGrenadeM74AGMI
-  name: M74 AGM-I 40mm Incendiary Grenade
-  description: M74 - Airburst Grenade Munition - Incendiary. This grenade must be launched with a grenade launcher, and detonates once it reaches its destination. It disperses jagged shrapnel in a cone in front of itself, tearing through sinews and armor alike. Dispersion pattern is optimized against large target. Suffers from overpenetration on a direct hit.
+  id: RMCBulletSentryFireBlue
+  name: Flaming Ball
+  description: Uh What? This shouldn't be seen
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Explosives/grenade_launcher.rsi
     layers:
-    - state: grenade_m74_airburst_i
+    - state: baton_slug
   - type: CartridgeAmmo
     deleteOnSpawn: true
-    proto: RMCAirBurstProjectileIncendiary
+    proto: RMCBulletSentryFireProjectileBlue
   - type: Tag
     tags:
     - Grenade
-    - LauncherCompatibleGrenade
-    - RMCAirburstGrenade
-    - RMCGrenadeAGMI
+
+- type: entity
+  parent: RMC40MMGrenadeM74AGMF
+  id: RMCBulletSentryFireSmoke
+  name: Flaming Ball
+  description: Uh What? This shouldn't be seen
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Explosives/grenade_launcher.rsi
+    layers:
+    - state: baton_slug
+  - type: CartridgeAmmo
+    deleteOnSpawn: true
+    proto: RMCBulletSentryFireProjectileSmoke
+  - type: Tag
+    tags:
+    - Grenade
+
+#- type: entity
+#  parent: RMC40MMGrenadeM74AGMF
+#  id: RMC40MMGrenadeM74AGMI
+#  name: M74 AGM-I 40mm Incendiary Grenade
+#  description: M74 - Airburst Grenade Munition - Incendiary. This grenade must be launched with a grenade launcher, and detonates once it reaches its destination. It disperses jagged shrapnel in a cone in front of itself, tearing through sinews and armor alike. Dispersion pattern is optimized against large target. Suffers from overpenetration on a direct hit.
+#  components:
+#  - type: Sprite
+#    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Explosives/grenade_launcher.rsi
+#    layers:
+#    - state: grenade_m74_airburst_i
+#  - type: CartridgeAmmo
+#    deleteOnSpawn: true
+#    proto: RMCAirBurstProjectileIncendiary
+#  - type: Tag
+#    tags:
+#    - Grenade
+#    - LauncherCompatibleGrenade
+#    - RMCAirburstGrenade
+#    - RMCGrenadeAGMI
 
 #- type: entity
 #  parent: RMCBaseBullet
@@ -122,8 +156,7 @@
   description: Huh? You shouldn't be able to see this...
   categories: [ HideSpawnMenu ]
   components:
-  - type: TriggerOnFixedDistanceStop
-    delay: 0
+  - type: IgniteOnProjectileHit
   - type: IgnorePredictionHide
   - type: Sprite
     sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Explosives/grenade_launcher.rsi
@@ -146,12 +179,98 @@
   - type: ContainerContainer
     containers:
       cluster-payload: !type:Container
-  - type: ScatteringGrenade
-    spreadAngle: 45
-    directHitTrigger: true
-    fillPrototype: RMCBatonSlugHIRR
-    capacity: 1
-    distance: 1
+  - type: SpawnOnTerminate
+    spawn: RMCTileFire
+  - type: IgnoreArc
+  - type: Fixtures
+    fixtures:
+      projectile:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.15,-0.45,0.15,0.15"
+        hard: false
+        mask:
+        - Impassable
+        - BulletImpassable
+
+- type: entity
+  parent: RMCBaseBullet
+  id: RMCBulletSentryFireProjectileBlue
+  name: Flaming Ball Blue
+  description: Huh? You shouldn't be able to see this...
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: IgniteOnProjectileHit
+  - type: IgnorePredictionHide
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Explosives/grenade_launcher.rsi
+    layers:
+    - state: baton_slug_active
+      shader: unshaded
+  - type: TileFire
+    id: RMCTileFireBlue
+  - type: Projectile
+    deleteOnCollide: True
+    impactEffect: BulletImpactEffect
+    damage:
+      types:
+        Heat: 35
+    soundHit:
+      path: /Audio/Weapons/Guns/Hits/bullet_hit.ogg
+  - type: RMCProjectileAccuracy
+    accuracy: 100
+    thresholds:
+    - range: 5
+      falloff: 10
+  - type: ContainerContainer
+    containers:
+      cluster-payload: !type:Container
+  - type: SpawnOnTerminate
+    spawn: RMCTileFireBlue
+  - type: IgnoreArc
+  - type: Fixtures
+    fixtures:
+      projectile:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.15,-0.45,0.15,0.15"
+        hard: false
+        mask:
+        - Impassable
+        - BulletImpassable
+
+- type: entity
+  parent: RMCBaseBullet
+  id: RMCBulletSentryFireProjectileSmoke
+  name: Flaming Ball Smoke
+  description: Huh? You shouldn't be able to see this...
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: IgniteOnProjectileHit
+  - type: IgnorePredictionHide
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Explosives/grenade_launcher.rsi
+    layers:
+    - state: baton_slug_active
+      shader: unshaded
+  - type: Projectile
+    deleteOnCollide: True
+    impactEffect: BulletImpactEffect
+    damage:
+      types:
+        Heat: 35
+    soundHit:
+      path: /Audio/Weapons/Guns/Hits/bullet_hit.ogg
+  - type: RMCProjectileAccuracy
+    accuracy: 100
+    thresholds:
+    - range: 5
+      falloff: 10
+  - type: ContainerContainer
+    containers:
+      cluster-payload: !type:Container
+  - type: SpawnOnTerminate
+    spawn: RMCSmoke
   - type: IgnoreArc
   - type: Fixtures
     fixtures:
