--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Magazines/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Magazines/sentry.yml
@@ -52,8 +52,77 @@
     sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Magazines/un12g.rsi
 
 
+- type: entity
+  parent: BaseMagazineRifle
+  id: RMCMagazineSentryFire
+  name: "Sentry Incinerator Fuel Tank"
+  description: "A fuel tank of Ultra Thick Napthal Fuel, used in the UA 45-FM. Contains 100 units of fuel."
+  components:
+  - type: Tag
+    tags:
+    - RMCMagazineSentryShotgun
+  - type: BallisticAmmoProvider
+    mayTransfer: True
+    whitelist:
+      tags:
+      - RMCBulletSentryFire
+    proto: RMCBulletSentryFire
+    capacity: 100
+    cycleable: false
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Magazines/un12g.rsi
+
+- type: entity
+  parent: BaseMagazineRifle
+  id: RMCMagazineSentryFireBlue
+  name: "Sentry Incinerator Fuel Tank"
+  description: "A fuel tank of usually Ultra Thick Napthal Fuel, a sticky combustible liquid chemical, used in the UA 55-FA."
+  components:
+  - type: Tag
+    tags:
+    - RMCMagazineSentryShotgun
+  - type: BallisticAmmoProvider
+    mayTransfer: True
+    whitelist:
+      tags:
+      - RMCBulletSentryFireBlue
+    proto: RMCBulletSentryFireBlue
+    capacity: 100
+    cycleable: false
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Magazines/un12g.rsi
+  
+- type: entity
+  parent: BaseMagazineRifle
+  id: RMCMagazineSentryFireSmoke
+  name: "Sentry Incinerator Fuel Tank"
+  description: "A fuel tank of compressed Ultra Thick Napthal Fuel, used in the UA 60-FP."
+  components:
+  - type: Tag
+    tags:
+    - RMCMagazineSentryShotgun
+  - type: BallisticAmmoProvider
+    mayTransfer: True
+    whitelist:
+      tags:
+      - RMCBulletSentryFireSmoke
+    proto: RMCBulletSentryFireSmoke
+    capacity: 100
+    cycleable: false
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Magazines/un12g.rsi
+
 - type: Tag
   id: RMCMagazineSentry
 
 - type: Tag
   id: RMCMagazineSentryShotgun
+
+- type: Tag
+  id: RMCMagazineSentryFire
+
+- type: Tag
+  id: RMCMagazineSentryFireBlue
+
+- type: Tag
+  id: RMCMagazineSentryFireSmoke
