--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
@@ -468,3 +468,150 @@
     deviation: 75
   - type: ProjectileDamageReceived
     multiplier: 0.1
+
+
+- type: entity
+  parent: RMCSentry
+  id: RMCSentryMiniFire
+  name: UA 45-FM mini sentry
+  description: The Mini Flamethrower Sentry Gun automatically tracks and fires upon any target that is wearing an ID not hooked up to the Almayer's systems. Just like the UA 571-C Sentry gun, this sentry has IFF but the fire that lingers doesn't. 
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Sentries/sentry.rsi
+    drawdepth: Mobs
+    noRot: true
+    layers:
+    - map: [ "sentry" ]
+      state: mini_uac_sentry_handheld
+  - type: Icon
+    sprite: _RMC14/Objects/Weapons/Sentries/sentry.rsi
+    state: mini_uac_sentry_handheld
+  - type: Appearance
+  - type: GenericVisualizer
+    visuals:
+      enum.SentryLayers.Layer:
+        sentry:
+          Item: { state: mini_uac_sentry_handheld }
+          Off: { state: mini_uac_sentry_noammo }
+          On: { state: mini_uac_sentry_on }
+  - type: Gun
+    fireRate: 1
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 150
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: GunDamageModifier
+    multiplier: 1
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.25
+        density: 20
+        mask:
+        - ItemMask
+        restitution: 0.3
+        friction: 0.2
+      sentry:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.45
+        density: 20
+        layer:
+        - BulletImpassable
+        hard: false
+  - type: Sentry
+    deployDelay: 0.75
+    undeployDelay: 0.75
+    upgrades: null
+    startingMagazine: RMCMagazineSentryFire
+    magazineTag: RMCMagazineSentryFire
+
+- type: entity
+  parent: RMCBaseSentry
+  id: RMCSentryFire
+  name: UA 55-FA Assault Sentry Flamer
+  description: The Flamethrower Sentry Gun automatically tracks and fires upon any target that is wearing an ID not hooked up to the Almayer's systems. Just like the UA 571-C Sentry gun, this sentry has IFF but the fire that lingers doesn't.
+  components:
+  - type: Gun
+    fireRate: .33
+  - type: Icon
+    sprite: _RMC14/Objects/Weapons/Sentries/sentry.rsi
+    state: normal_uac_sentry_handheld
+  - type: NpcFactionMember
+    factions:
+    - UNMC
+  - type: UserIFF
+    faction: FactionMarine
+  - type: Sentry
+    upgrades: ["RMCSentryMiniFire", "RMCSentrySniperFire"]
+    startingMagazine: RMCMagazineSentryFireBlue
+    magazineTag: RMCMagazineSentryFireBlue
+
+- type: entity
+  parent: RMCSentry
+  id: RMCSentrySniperFire
+  name: UA 60-FP Plasma Sentry
+  description: The Plasma Flamethrower Sentry Gun automatically tracks and fires upon any target that is wearing an ID not hooked up to the Almayer's systems. Just like the UA 571-C Sentry gun, this sentry has IFF but the phosphorus that lingers doesn't.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Sentries/sentry.rsi
+    drawdepth: Mobs
+    noRot: true
+    layers:
+    - map: [ "base" ]
+      state: defense_base_off
+    - map: [ "sentry" ]
+      state: dmr_uac_sentry_handheld
+  - type: Icon
+    sprite: _RMC14/Objects/Weapons/Sentries/sentry.rsi
+    state: dmr_uac_sentry_handheld
+  - type: Appearance
+  - type: GenericVisualizer
+    visuals:
+      enum.SentryLayers.Layer:
+        base:
+          Item: { state: "", visible: false }
+          Off: { state: defense_base_off, visible: true }
+          On: { state: defense_base, visible: true }
+        sentry:
+          Item: { state: dmr_uac_sentry_handheld }
+          Off: { state: dmr_uac_sentry_noammo }
+          On: { state: dmr_uac_sentry_on }
+  - type: Gun
+    fireRate: 0.14
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 150
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: HTN
+    blackboard:
+      SoundTargetInLOS: !type:SoundPathSpecifier
+        path: /Audio/Effects/double_beep.ogg
+      VisionRadius: !type:Single
+        11.0
+      AggroVisionRadius: !type:Single
+        11.0
+  - type: Sentry
+    deployDelay: 2
+    upgrades: null
+    startingMagazine: RMCMagazineSentryFireSmoke
+    magazineTag: RMCMagazineSentryFireSmoke
+  - type: RMCWeaponAccuracy
+    accuracyMultiplier: 4
+    accuracyMultiplierUnwielded: 4
