Change fire sentry names to be UN centric

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Sentries/sentries.yml
@@ -473,7 +473,7 @@
 - type: entity
   parent: RMCSentry
   id: RMCSentryMiniFire
-  name: UA 45-FM mini sentry
+  name: UN 45-FM mini sentry
   description: The Mini Flamethrower Sentry Gun automatically tracks and fires upon any target that is wearing an ID not hooked up to the Almayer's systems. Just like the UA 571-C Sentry gun, this sentry has IFF but the fire that lingers doesn't. 
   components:
   - type: Sprite
@@ -538,7 +538,7 @@
 - type: entity
   parent: RMCBaseSentry
   id: RMCSentryFire
-  name: UA 55-FA Assault Sentry Flamer
+  name: UN 55-FA Assault Sentry Flamer
   description: The Flamethrower Sentry Gun automatically tracks and fires upon any target that is wearing an ID not hooked up to the Almayer's systems. Just like the UA 571-C Sentry gun, this sentry has IFF but the fire that lingers doesn't.
   components:
   - type: Gun
@@ -570,7 +570,7 @@
 - type: entity
   parent: RMCSentry
   id: RMCSentrySniperFire
-  name: UA 60-FP Plasma Sentry
+  name: UN 60-FP Plasma Sentry
   description: The Plasma Flamethrower Sentry Gun automatically tracks and fires upon any target that is wearing an ID not hooked up to the Almayer's systems. Just like the UA 571-C Sentry gun, this sentry has IFF but the phosphorus that lingers doesn't.
   components:
   - type: Sprite
