--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/sentry.yml
@@ -270,7 +270,13 @@
     containers:
       cluster-payload: !type:Container
   - type: SpawnOnTerminate
-    spawn: RMCSmoke
+    spawn: RMCSmokeFireSentry
+
+  #- type: edgeSpreader
+  #  id: RMCSmokeAcid
+  #  updatesPerSecond: 5
+  #- type: EvenSmoke
+  #  range: 2
   - type: IgnoreArc
   - type: Fixtures
     fixtures:
