--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m4spr_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m4spr_rifle.yml
@@ -13,8 +13,13 @@
       state: d_m4spr_barrel
       offset: 0.65, 0
       map: [ "barrel" ]
-    - state: mag-0
+    - state: mag-5
       map: [ "enum.GunVisualLayers.Mag" ]
+  - type: MagazineVisuals
+    magState: mag
+    steps: 6
+    zeroVisible: true
+    zeroOnlyOnEmpty: true
   - type: Clothing
     sprite: _RMC14/Objects/Weapons/Guns/Rifles/m4spr/desert.rsi
   - type: Gun
