Valkyrie foam now appears in xeno nightvision

--- a/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
+++ b/Resources/Prototypes/_RMC14/Effects/xeno_acid.yml
@@ -169,6 +169,7 @@
     lifetime: 3.0
 
 - type: entity
+  parent: RMCBaseEffect
   id: XenoAcidExtinguishEffect
   description: It's cold...
   categories: [ HideSpawnMenu ]
