Fix xenos patting away 10 fire stacks instead of 5 per pat

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -446,6 +446,7 @@
       - XenoFruit
   - type: ParalyzeOnPullAttempt
   - type: FirePatter
+    stacks: 5
   - type: RMCHandEmotes
 
 - type: entity
