--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/crates.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/crates.yml
@@ -101,7 +101,7 @@
     virtualLeft: RMCVirtualCrateLeft
   - type: RMCCanBeFultoned
   - type: ReceiverXenoClaws
-    minimumClawStrength: VerySharp
+    minimumClawStrength: ImpossiblySharp
 
 - type: entity
   parent: RMCCrateBase
