--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -339,5 +339,6 @@
     range: 2
   - type: RMCArmorModifier
     meleeArmorModifier: 5
+  - type: MobCollision
   - type: RMCMobCollision
   - type: RMCRest
