--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/SmartGuns/smart_gun.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/SmartGuns/smart_gun.yml
@@ -437,6 +437,9 @@
   id: RMCMagazineSmartGunirradiated
 
 - type: Tag
+  id: RMCMagazineSmartGunHT
+
+- type: Tag
   id: CMCartridgeSmartGun10x30mm
 
 - type: Tag
