--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -344,9 +344,9 @@
 - type: vendingMachineInventory
   id: CMVendorNutri
   startingInventory:
-    EZNutrientChemistryBottle: 35
-    Left4ZedChemistryBottle: 25
-    RobustHarvestChemistryBottle: 15
+    ChemistryBottleEZNutrient: 35
+    ChemistryBottleLeft4Zed: 25
+    ChemistryBottleRobustHarvest: 15
     PestSpray: 20
     Syringe: 5
     PlantBag: 5
