--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
@@ -134,6 +134,7 @@
     plasma: 215
   - type: RMCDeleteAnchoredOnInit
     enabled: true
+  - type: QueenEyeVision
 
 - type: entity # TODO RMC14 sound
   parent: XenoWeeds
