--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -244,8 +244,28 @@
     debuffModifier: 1.4
   - type: IntelRecoverCorpseObjectiveOnDeath
     value: 1.4
+  - type: QueenEyeAction
+#  - type: StunFriendlyXenoOnStep
 
 - type: entity
   id: XenoLeaderPheromoneRelay
   components:
   - type: XenoPheromones
+
+- type: entity
+  parent: StationAiHolo
+  id: RMCQueenEye
+  name: queen eye
+  description: It seems to be a visual projection of someone.
+  categories: [ HideSpawnMenu, DoNotMap ]
+  components:
+  - type: Sprite
+    color: "#a800a8"
+    sprite: _RMC14/Effects/xeno_eye.rsi
+    layers:
+    - state: hologram
+  - type: Eye
+    drawFov: false
+  - type: QueenEye
+  - type: MotionDetectorTracked
+    isQueenEye: true
