--- a/Resources/Prototypes/Entities/Mobs/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/base.yml
@@ -8,7 +8,7 @@
   - type: Sprite
     noRot: true
     drawdepth: Mobs
-  - type: MobCollision
+#  - type: MobCollision # RMC14
   - type: Physics
     bodyType: KinematicController
   - type: Fixtures
