Light Sequence System: Sunset and Sunrise (#6174)

--- a/Resources/Maps/_RMC14/shiva.yml
+++ b/Resources/Maps/_RMC14/shiva.yml
@@ -141,6 +141,8 @@ entities:
       - name: Blizzard
         duration: 240
         weatherType: RMCStrataBlizzard
+    - type: RMCAmbientLightEffects
+      sunset: RMCColorSequenceSunsetCold
     - type: LoadedMap
     - type: MapGrid
       chunks:
