--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
@@ -210,6 +210,7 @@
     - type: RMCSlowdown
     - type: RMCSuperSlowdown
     - type: RMCRooted
+    - type: RMCDazed
   - type: XenoHighGallop
 
 - type: entity
