--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/crew_coats.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/crew_coats.yml
@@ -48,6 +48,8 @@
     sprite: _RMC14/Objects/Clothing/OuterClothing/HazardVests/orange.rsi
   - type: Clothing
     sprite: _RMC14/Objects/Clothing/OuterClothing/HazardVests/orange.rsi
+  - type: AllowSuitStorage
+    allowedWhitelist: RMCAllowSuitStorageClothingHazardVest
 
 - type: entity
   parent: RMCHazardVest
