--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
@@ -18,7 +18,12 @@
       - CMSurgicalCase
   - type: PlaytimeMedalHolder
   - type: AllowSuitStorage
-    whitelist: {}
+    whitelist: { }
+  - type: RMCAllowSuitStorageUserWhitelist
+    allowedWhitelist: RMCAllowSuitStorageClothingJacket
+    user:
+      components:
+      - RMCSurvivor
 
 - type: entity
   abstract: True
@@ -64,8 +69,9 @@
       visible: true
 
 - type: entity
-  abstract: true
   id: RMCAllowSuitStorageClothingJacket
+  categories:
+  - HideSpawnMenu
   components:
   - type: AllowSuitStorage
     whitelist:
@@ -92,8 +98,9 @@
       - RMCMatebaHolster
 
 - type: entity
-  abstract: true
   id: RMCAllowSuitStorageClothingHazardVest
+  categories:
+  - HideSpawnMenu
   components:
   - type: AllowSuitStorage
     whitelist:
