--- a/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
@@ -11,9 +11,11 @@
   text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
   children:
   - RMCGuideNewPlayer
-  - RMCMedical
-  - RMCRequisitions
-  - RMCIntel
+  - RMCChemicals
+  - RMCGuideMarineRoles
+  - RMCGuideMarineStructures
+  - RMCGuideXenonidRoles
+  - RMCGuideXenonidStructures
 
 - type: guideEntry
   parent: RMC
@@ -23,10 +25,48 @@
   children:
   - RMCGuideRoleRifleman
   - RMCGuideRoleDrone
+
+# marine roles
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideMarineRoles
+  name: "Marine Roles"
+  text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
+  children:
+  - RMCMedical
+  - RMCRequisitions
+  - RMCIntel
   - RMCGuideRoleCombatTechnician
-  - RMCGuideCommunicationsTowers
   - RMCGuideRoleMaintenanceTechnician
   - RMCGuideRoleSGO
+
+# marine structures
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideMarineStructures
+  name: "Marine Structures"
+  text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
+  children:
+  - RMCGuideCommunicationsTowers
+
+# Xenonid roles
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideXenonidRoles
+  name: "Xenonid Roles"
+  text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
+#  children:
+#  - Put something here someday
+
+# Xenonid structures
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideXenonidStructures
+  name: "Xenonid Structures"
+  text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
+#  children:
+#  - Put something here someday
+
 
 - type: guideEntry
   parent: RMC
@@ -47,48 +87,71 @@
   id: RMCGuideRoleCombatTechnician
   priority: 2
   name: "Combat Technician"
-  text: "/ServerInfo/Guidebook/_RMC14/NewPlayerGuide/RMCGuideRoleCombatTechnician.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleCombatTechnician.xml"
 
 - type: guideEntry
   parent: RMC
   id: RMCGuideCommunicationsTowers
   priority: 3
   name: "Communications Towers Guide"
-  text: "/ServerInfo/Guidebook/_RMC14/NewPlayerGuide/RMCGuideCommunicationsTowers.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideCommunicationsTowers.xml"
 
 - type: guideEntry
   parent: RMC
   id: RMCGuideRoleMaintenanceTechnician
   priority: 4
   name: "Maintenance Technician"
-  text: "/ServerInfo/Guidebook/_RMC14/NewPlayerGuide/RMCGuideRoleMaintenanceTechnician.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleMaintenanceTechnician.xml"
 
 - type: guideEntry
   parent: RMC
   id: RMCMedical
   priority: 5
   name: "Medical"
-  text: "/ServerInfo/Guidebook/_RMC14/Medical/RMCMedical.xml"
-  children:
-  - RMCChemicals
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCMedical.xml"
 
 - type: guideEntry
   parent: RMC
   id: RMCRequisitions
   priority: 6
   name: "Requisitions"
-  text: "/ServerInfo/Guidebook/_RMC14/RMCRequisitions.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCRequisitions.xml"
 
 - type: guideEntry
   parent: RMC
   id: RMCIntel
   priority: 7
   name: "Intel"
-  text: "/ServerInfo/Guidebook/_RMC14/RMCIntel.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCIntel.xml"
 
 - type: guideEntry # made by GoodShowOldChap
   parent: RMC
   id: RMCGuideRoleSGO
   priority: 9
   name: "Smart Gun Operator"
-  text: "/ServerInfo/Guidebook/_RMC14/NewPlayerGuide/RMCGuideRoleSGO.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleSGO.xml"
+
+- type: guideEntry
+  parent: RMC
+  id: RMCChemicals
+  name: guide-entry-chemicals
+  text: "/ServerInfo/Guidebook/_RMC14/Chemicals/RMCChemicals.xml"
+  priority: 20
+  children:
+  #  - RMCElements
+  - RMCMedicine
+  #  - RMCNarcotics
+  #  - RMCPyrotechnic
+  #  - RMCToxins
+  #  - RMCFoods
+  #  - RMCBotanical
+  #  - RMCBiological
+  #  - RMCOthers
+  filterEnabled: True
+
+- type: guideEntry
+  parent: RMC
+  id: RMCMedicine
+  name: guide-entry-medicine
+  text: "/ServerInfo/Guidebook/_RMC14/Chemicals/Medicine.xml"
+  filterEnabled: True
