--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
@@ -85,30 +85,42 @@
 
 - type: entity
   parent: CMLockerBase
-  id: RMCLockerGunBlue
-  name: riot control equipment Cabinet
+  id: RMCLockerGunBase
+  name: gun cabinet
+  description: It's an immobile card-locked storage unit.
   components:
   - type: Sprite
     sprite: _RMC14/Structures/Storage/Lockers/armorylocker.rsi
   - type: AccessReader
     access: [["CMAccessArmory"]]
+  - type: InsertBlacklist
+    blacklist:
+      components:
+      - Xeno
+      - Marine
 
 - type: entity
-  parent: CMLockerBase
+  parent: RMCLockerGunBase
+  id: RMCLockerGunBlue
+  name: riot control equipment Cabinet
+  components:
+  - type: RMCUnlockOnAlertLevel
+    level: Blue
+
+- type: entity
+  parent: RMCLockerGunBase
   id: RMCLockerGun
   name: gun cabinet
   description: It's an immobile card-locked storage unit.
   suffix: Colony
   components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Storage/Lockers/armorylocker.rsi
   - type: AccessReader
     access: [["CMAccessColonyArmory"]]
   - type: Destructible
     thresholds: []
 
 - type: entity
-  parent: RMCLockerGun
+  parent: RMCLockerGunBase
   id: RMCLockerGunRed
   name: red alert gun cabinet
   components:
