--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_base_id.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_base_id.yml
@@ -152,3 +152,15 @@
   - type: FactionFrequencies
     channels:
     - Colony
+
+- type: entity
+  id: FactionSPP
+  components:
+  - type: IFFFaction
+  - type: FactionFrequencies
+    channels:
+    - SPP
+    - SPPCommand
+    - SPPEngi
+    - SPPMed
+    - SPPCCT
