--- a/Resources/Prototypes/_RMC14/Factions/rmc_factions.yml
+++ b/Resources/Prototypes/_RMC14/Factions/rmc_factions.yml
@@ -9,7 +9,13 @@
   - UNMC
 
 - type: npcFaction
+  id: SPP
+  hostile:
+  - RMCXeno
+
+- type: npcFaction
   id: RMCDumb
   hostile:
   - UNMC
   - RMCXeno
+  - SPP
